--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="Omsorgindex.css" type="text/css">
+    <title>Helsingborg.se | Helsingborgs stad</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <script src="app.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>     
        
+
+<!---- Upperheader header ( sticky nav ) -->   
+
 <div class="uppheader">
     <div class="upphead">
         <img src="helsingborg.png" alt="Helsingborgs.se logo" class="hbglogo">
@@ -20,7 +25,7 @@
     </div>
 </div>
 
-<!---- lägre header ( sticky nav ) -->     
+<!---- Lower header ( sticky nav ) -->     
 
 <div class="lowerheader">
     <div class="lowhead">
